--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -8,10 +8,13 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "vite": "npm:rolldown-vite@7.1.14"
+  "dependencies": {
+    "@supabase/supabase-js": "^2.80.0",
+    "@capacitor/core": "^7.4.4"
   },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.1.14"
+  "devDependencies": {
+    "vite": "^5.2.10",
+    "@capacitor/cli": "^7.4.4",
+    "@capacitor/android": "^7.4.4"
   }
 }
